--- a/src/Frontend/src/app/Feature/doctors/doctors.html
+++ b/src/Frontend/src/app/Feature/doctors/doctors.html
@@ -70,7 +70,7 @@
             @for( doctor of allDoctors ; track doctor.id)
             {
                 <div class="col-md-6 col-lg-3 aos-init aos-animate" data-aos="zoom-in" data-aos-delay="100">
-                    <a [routerLink]="['/doctors', doctor.id]"
+                    <a 
                                    class="text-dark text-decoration-none">
                     <div class="team-card text-center">
                         <div class="team-image">
@@ -99,6 +99,18 @@
                                 <i class="bi bi-star-fill text-dark-yellow"></i>
                                 <i class="bi bi-star-half text-dark-yellow"></i>
                                 <i class="bi bi-star text-dark-yellow"></i>
+                            </div>
+
+                            <div class="text-center mt-4">
+                        @if(isCustomerLogginIn) {
+                            <button class="btn btn-lg btn-success px-5 py-2 shadow-sm" [routerLink]="['/doctors', doctor.id]">
+                             Book Now
+                            </button>
+                            } @else {
+                            <a [routerLink]="['/login']" class="btn btn-lg btn-outline-danger px-2 py-2 shadow-sm fs-6">
+                             You should login as customer to book appointment
+                            </a>
+                        }
                             </div>
                         </div>
                     </div>
