--- a/src/Frontend/src/app/Feature/breeds/all-breeds/all-breeds.html
+++ b/src/Frontend/src/app/Feature/breeds/all-breeds/all-breeds.html
@@ -22,7 +22,9 @@
 
 <div class="container">
   <h5>Manage Breeds</h5>
-
+  <a [routerLink]="['/admin/add-breed']" class="btn btn-outline-primary btn-sm">
+    Add New Breed
+  </a>
   <!-- Category Filter -->
   <div class="mb-4 mt-4">
     <label class="form-label">Filter by Category</label>
@@ -53,7 +55,7 @@
           </p>
           <div class="d-flex justify-content-center gap-2 mt-3">
             <a
-              [routerLink]="['/breed', breed.id]"
+              [routerLink]="['/admin/breed', breed.id]"
               class="btn btn-outline-primary btn-sm w-100"
             >
               <i class="bi bi-pencil-square me-1"></i> Edit
