--- a/src/Frontend/src/app/Feature/categories/All-categories/categories.html
+++ b/src/Frontend/src/app/Feature/categories/All-categories/categories.html
@@ -33,10 +33,14 @@
         {{ categories.length }}
       </span>
     </div> -->
-
+    <h5>Manage Categories</h5>
+    <a
+      class="btn bt-sm btn-outline-primary mb-4"
+      [routerLink]="['/admin/add-category']"
+    >
+      Add New Category
+    </a>
     <div class="row g-4">
-      <h5>Manage Categories</h5>
-
       <div class="col-12 col-md-6 col-lg-4" *ngFor="let cat of categories">
         <div class="card shadow-rounded-4 h-100">
           <div class="card-body d-flex flex-column">
@@ -45,7 +49,7 @@
             <div class="d-flex justify-content-center gap-2 mt-3">
               <a
                 class="btn btn-outline-primary w-100"
-                [routerLink]="['/category', cat.id]"
+                [routerLink]="['/admin/category', cat.id]"
               >
                 <i class="bi bi-pencil-square me-1"></i> Edit Or Delete
               </a>
