--- a/src/Frontend/src/app/Feature/categories/add-category/add-category.html
+++ b/src/Frontend/src/app/Feature/categories/add-category/add-category.html
@@ -1,9 +1,9 @@
-<section class="container my-5">
-  <div class="section-title text-center mb-4">
+<section class="container mb-5 pt-0">
+  <!-- <div class="section-title text-center mb-4">
     <h2>Add New Category</h2>
     <p>Create a new pet category</p>
-  </div>
-
+  </div> -->
+  <h5>Add New Category</h5>
   <div *ngIf="error" class="alert alert-danger text-center">{{ error }}</div>
 
   <form #form="ngForm" (ngSubmit)="onSubmit(form)" novalidate>
@@ -54,7 +54,7 @@
         >
           {{ saving ? "Saving..." : "Save Category" }}
         </button>
-        <a routerLink="/categories" class="btn btn-secondary">Cancel</a>
+        <a routerLink="/admin/categories" class="btn btn-secondary">Cancel</a>
       </div>
     </div>
   </form>
