--- a/src/Frontend/src/app/Feature/customer-profile/Profile/customer-profile.html
+++ b/src/Frontend/src/app/Feature/customer-profile/Profile/customer-profile.html
@@ -285,7 +285,7 @@
                         <i class="bi bi-whatsapp me-1"></i> Contact
                       </button>
                       <button
-                        class="btn btn-outline-success btn-sm"
+                        class="btn btn-outline-success btn-sm mx-2"
                         [routerLink]="['/chat', request.reqCustomerId]"
                       >
                         Chat
