changed buttons added doc profile in header - hover effect on appointments - added guards

--- a/src/Frontend/src/app/Feature/header/header.html
+++ b/src/Frontend/src/app/Feature/header/header.html
@@ -88,6 +88,13 @@
             *ngIf="isAuthenticated() && authService.isAdmin()"
             >Dashboard</a
           >
+
+          <a
+            class="btn m-2"
+            routerLink="/doc-profile"
+            *ngIf="isAuthenticated() && authService.isCusDoctor()"
+            >Profile</a
+          >
         </ng-container>
 
         <!-- Notifications Icon -->
