--- a/src/Frontend/src/app/Feature/profile/profile.html
+++ b/src/Frontend/src/app/Feature/profile/profile.html
@@ -1,4 +1,4 @@
 
-<app-doctor [doctor]="passedDoctor"></app-doctor>
+<!-- <app-doctor [doctor]="passedDoctor"></app-doctor> -->
 
 <!-- <app-customer [customer]="passedCustomer"></app-customer> -->
