--- a/src/Frontend/src/app/Feature/doctor-profile/doctor-profile.html
+++ b/src/Frontend/src/app/Feature/doctor-profile/doctor-profile.html
@@ -1,4 +1,10 @@
-@if(typeof doctor != 'string' && !errorFound) {
+<div *ngIf="profileLoading()" class="container py-5">
+  <div  class="text-center">
+    <div class="spinner-border text-primary" role="status"></div>
+    <p class="mt-3">Loading doctor details...</p>
+  </div>
+</div>
+@if(typeof doctor != 'string' && !errorFound && !profileLoading()) {
   <section id="hero" class="hero section pb-0">
     <div class="container section-title aos-init aos-animate pb-0" data-aos="fade-up">
       <h2>Our Vets</h2>
