--- a/src/Frontend/src/app/Feature/doctors/doctors.html
+++ b/src/Frontend/src/app/Feature/doctors/doctors.html
@@ -1,5 +1,10 @@
-
-
+@if(doctorsAreLoading()){
+    <div class="text-center p-5">
+  <div class="spinner-border text-primary" role="status"></div>
+  <p class="mt-3">Loading doctors</p>
+</div>
+}
+@else{
 <section id="hero" class="hero section pb-0">
     <div class="container section-title aos-init aos-animate pb-0" data-aos="fade-up">
         <h2>Our Vets</h2>
@@ -103,14 +108,17 @@
 
                             <div class="text-center mt-4">
                         @if(isCustomerLogginIn) {
-                            <button class="btn btn-lg btn-success px-5 py-2 shadow-sm" [routerLink]="['/doctors', doctor.id]">
+                            <button class="btn btn-primary btn-sm" [routerLink]="['/doctors', doctor.id]">
                              Book Now
                             </button>
                             } @else {
-                            <a [routerLink]="['/login']" class="btn btn-lg btn-outline-danger px-2 py-2 shadow-sm fs-6">
-                             You should login as customer to book appointment
-                            </a>
-                        }
+                                <div class="mt-3 d-flex justify-content-center gap-2">
+                                    <a
+                                        [routerLink]="['/doctor-details',doctor.id]"
+                                        class="btn btn-outline-primary btn-sm"
+                                    >Learn More</a>
+                                </div>
+                            }
                             </div>
                         </div>
                     </div>
@@ -120,4 +128,5 @@
         </div>
     </div>
 </section>
+}
 }
