--- a/src/Frontend/src/app/Feature/doctor-edit-profile/doctor-edit-profile.html
+++ b/src/Frontend/src/app/Feature/doctor-edit-profile/doctor-edit-profile.html
@@ -1,5 +1,11 @@
+<div *ngIf="profileLoading()" class="container py-5">
+  <div  class="text-center">
+    <div class="spinner-border text-primary" role="status"></div>
+    <p class="mt-3">Loading doctor details...</p>
+  </div>
+</div>
 
- @if(typeof editedDoctor != 'string'){
+ @if(typeof editedDoctor != 'string' && !profileLoading()){
 
 <section id="hero" class="hero section pb-3">
     <div class="container section-title aos-init aos-animate pb-0" data-aos="fade-up">
@@ -72,17 +78,6 @@
     </div>
   </div>
 
-  <!-- Certificate URL -->
-  <div class="col-md-6">
-    <label class="form-label">Certificate URL:</label>
-    <input name="CertificateUrl" [(ngModel)]="editedDoctor.CertificateUrl" class="form-control" />
-  </div>
-
-  <!-- Image URL -->
-  <div class="col-md-6">
-    <label class="form-label">Image URL:</label>
-    <input name="ImgUrl" [(ngModel)]="editedDoctor.ImgUrl" class="form-control" />
-  </div>
 
   <!-- Street -->
   <div class="col-md-6">
@@ -117,7 +112,7 @@
 </div>
 
 <div class="col-md-6">
-  <button [routerLink]="['/doctors','timeslot',editedDoctor.id]" class="btn btn-primary">Update Time Slot</button>
+  <!-- <button [routerLink]="['/doctors','timeslot',editedDoctor.id]" class="btn btn-primary">Update Time Slot</button> -->
 </div>
 
   <!-- Actions -->
