--- a/src/Frontend/src/app/Feature/customer-profile/Profile/customer-profile.html
+++ b/src/Frontend/src/app/Feature/customer-profile/Profile/customer-profile.html
@@ -1,4 +1,4 @@
-<section id="hero" class="hero section pb-5">
+<!-- <section id="hero" class="hero section pb-5">
   <div
     class="container section-title aos-init aos-animate pb-0"
     data-aos="fade-up"
@@ -10,8 +10,7 @@
       Check the adoption reqests you sent, received and pets you added so far.
     </p>
   </div>
-  <!-- End Section Title -->
-</section>
+</section> -->
 
 <section
   class="w-100 p-4"
