--- a/src/Frontend/src/app/Feature/login/login.html
+++ b/src/Frontend/src/app/Feature/login/login.html
@@ -14,7 +14,7 @@
           <form
             (ngSubmit)="onLogin()"
             #loginForm="ngForm"
-            *ngIf="!authService.isAuthenticated()"
+            *ngIf="!accountService.isAuthenticated()"
           >
             <!-- Email -->
             <div class="mb-3">
@@ -69,7 +69,7 @@
               Login
             </button>
           </form>
-          <p *ngIf="authService.isAuthenticated()" class="text-center">
+          <p *ngIf="accountService.isAuthenticated()" class="text-center">
             You are already logged in ✔️✔️
           </p>
         </div>
