--- a/src/Frontend/src/app/Feature/pets/All-Pets/pets.html
+++ b/src/Frontend/src/app/Feature/pets/All-Pets/pets.html
@@ -3,12 +3,12 @@
     class="container section-title aos-init aos-animate pb-0"
     data-aos="fade-up"
   >
-    <h2>Discover Our Pets</h2>
+    <h2>{{ title }}</h2>
     <p>Find your new best friend and give a rescued pet a loving home.</p>
 
     <!-- <div
       class="mt-3 d-flex justify-content-center gap-3"
-      *ngIf="authService.isAuthenticated()"
+      *ngIf="accountService.isAuthenticated()"
     >
       <a class="btn btn-primary btn-sm" routerLink="/categories">
         Manage Categories
@@ -111,15 +111,15 @@
             <span>{{ statusMap[pet.status] }}</span>
             <span
               class="text-success"
-              *ngIf="authService.getUserId() === pet.customerId"
+              *ngIf="accountService.getUserId() === pet.customerId"
               >Your Pet</span
             >
 
-            <span *ngIf="authService.getUserId() !== pet.customerId"
+            <span *ngIf="accountService.getUserId() !== pet.customerId"
               ><span class="fw-semibold d-inline">Posted By:</span>
               {{ pet.customerName }}</span
             >
-            <span *ngIf="authService.getUserId() !== pet.customerId"
+            <span *ngIf="accountService.getUserId() !== pet.customerId"
               ><span class="fw-semibold d-inline">From:</span>
               {{ pet.customerCity }}</span
             >
@@ -133,8 +133,8 @@
                 class="btn btn-primary btn-sm"
                 *ngIf="
                   isDataReady &&
-                  authService.isAuthenticated() &&
-                  authService.getUserId() !== pet.customerId &&
+                  accountService.isAuthenticated() &&
+                  accountService.getUserId() !== pet.customerId &&
                   !requestedPetIds.includes(pet.id)
                 "
                 (click)="sendAdoptionRequest(pet)"
@@ -144,8 +144,8 @@
               <button
                 *ngIf="
                   isDataReady &&
-                  authService.isAuthenticated() &&
-                  authService.getUserId() !== pet.customerId &&
+                  accountService.isAuthenticated() &&
+                  accountService.getUserId() !== pet.customerId &&
                   requestedPetIds.includes(pet.id)
                 "
                 class="btn btn-danger btn-sm"
